<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">博客园</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">用户搜索</string>
    <string name="action_new">新建博客</string>
    <string name="action_person">个人中心</string>
    <string name="action_collect">收藏</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="action_comment">评论</string>
    <string name="action_share">分享</string>
    <string name="title_activity_main">博客园</string>
    <string name="title_activity_settings">偏好设置</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_person">个人中心</string>
    <string name="title_activity_collection">收藏列表</string>
    <string name="title_activity_publish">发表博客</string>
    <string name="title_activity_blog">博客正文</string>
    <string name="title_activity_user">用户中心</string>
    <string name="title_activity_news">新闻内容</string>
    <string name="title_activity_comment">查看评论</string>
    <string name="title_activity_search">搜索博主</string>
    <string name="title_activity_user_center">用户中心</string>
    <string name="text_logo_cn">博客园</string>
    <string name="text_logo_en">Cnblogs.com</string>
    <string name="text_version">Version 1.0</string>
    <string name="text_copyright">Copyright ©2014 Zhang Tingkuo</string>
    <string name="text_click_login">点击登录</string>
    <string name="text_person_name">用户名</string>
    <string name="text_reg_date">注册时间</string>
    <string name="text_loading">正在加载…</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_blog_title_home">首页</string>
    <string name="text_blog_title_recommend">推荐</string>
    <string name="text_blog_title_reading">阅读</string>
    <string name="text_news_title_latest">最新</string>
    <string name="text_news_title_hot">热门</string>
    <string name="text_news_title_recommend">推荐</string>
    <string name="text_author">作者：</string>
    <string name="text_pub_time">发布时间：</string>
    <string name="text_button_search">搜索博主</string>
    <string name="text_button_login">登录</string>
    <string name="text_button_visitor">游客</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_logincode">验证码</string>
    <string name="text_nickname">昵称:</string>
    <string name="text_cnblogs_age">园龄:</string>
    <string name="text_followers">粉丝:</string>
    <string name="text_followees">关注:</string>
    <string name="text_button_draft">保存草稿</string>
    <string name="text_button_publish">发布博客</string>

</resources>