<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arlen.cnblogs.MainActivity" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_person"
        android:icon="@drawable/ic_action_persion"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_person"/>
    <item
        android:id="@+id/action_collect"
        android:icon="@drawable/ic_action_collect"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_collect"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>