<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_drawer_list_login" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_click_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_person_name" />

            <TextView
                android:id="@+id/textViewRegDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_reg_date" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>