<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:background="#FFEEEEEE"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewPersonalAvatar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:contentDescription="@string/title_activity_user_center"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:padding="15dp" >

            <TextView
                android:id="@+id/textViewPersonalNickName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/text_nickname" />

            <TextView
                android:id="@+id/textViewPersonalCnblogsAge"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/text_cnblogs_age" />

            <TextView
                android:id="@+id/textViewPersonalFollowers"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/text_followers" />

            <TextView
                android:id="@+id/textViewPersonalFollowees"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/text_followees" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutPersonalBlog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >

        <ListView
            android:id="@+id/listViewPersonalBlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>