<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutBlogTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFDDDDDD"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutBlogTitleHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewBlogHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blog_title_home"
                android:textColor="@color/title_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBlogTitleRecommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewBlogRecommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blog_title_recommend"
                android:textColor="@color/title_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBlogTitleReading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewBlogReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_blog_title_reading"
                android:textColor="@color/title_text_color" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewGuildLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_guild_line" >
    </ImageView>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </android.support.v4.view.ViewPager>

</LinearLayout>